--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 
 <section class="mb-16">
   <h2 id="current-day-title" class="text-3xl font-bold mb-6"></h2>
-  <div id="movies-grid" class="grid md:grid-cols-3 gap-6"></div>
+  <!-- Aquí: mobile-first será una lista vertical con cards en horizontal; en md+ vuelve a grid de 3 columnas -->
+  <div id="movies-grid" class="flex flex-col gap-6 md:grid md:grid-cols-3"></div>
 </section>
 
 <section class="bg-slate-900 p-8 rounded-3xl border border-yellow-500/20">
@@ -185,35 +186,37 @@ function render() {
   grid.innerHTML = "";
 
   day.movies.forEach((m, idx) => {
-    const votes = m.votes ? Object.keys(m.votes).length : 0;
-    const voted = m.votes && m.votes[uid];
+      const votes = m.votes ? Object.keys(m.votes).length : 0;
+      const voted = m.votes && m.votes[uid];
 
-    grid.innerHTML += `
-      <div class="bg-slate-800 rounded-xl overflow-hidden border border-slate-700">
-        <img src="${m.img}" class="w-full aspect-[2/3] object-contain bg-black">
+      grid.innerHTML += `
+        <div class="bg-slate-800 rounded-xl overflow-hidden border border-slate-700 flex flex-row md:flex-col items-center md:items-stretch">
+          <img src="${m.img}" class="w-28 h-40 ml-4 mt-4 mb-4 rounded-lg md:m-0 md:rounded-none md:w-full md:aspect-[2/3] object-cover bg-black">
 
-        <div class="p-4">
-          <span class="bg-yellow-500 text-black px-3 py-1 rounded text-xs font-black">${m.time}</span>
+          <div class="p-4 flex-1 w-full">
+            <div class="flex items-start justify-between gap-4">
+              <span class="bg-yellow-500 text-black px-3 py-1 rounded text-xs font-black">${m.time}</span>
+            </div>
 
-          <h3 class="text-xl font-bold mt-2">${m.title}</h3>
+            <h3 class="text-xl font-bold mt-2">${m.title}</h3>
 
-          ${m.rating ? `
-            <div class="text-yellow-400 font-bold mt-1 flex items-center gap-1">
-              <i class="fas fa-star"></i> IMDb ${m.rating}/10
-            </div>` : ""}
+            ${m.rating ? `
+              <div class="text-yellow-400 font-bold mt-1 flex items-center gap-1">
+                <i class="fas fa-star"></i> IMDb ${m.rating}/10
+              </div>` : ""}
 
-          <p class="text-slate-400 italic text-sm mt-2">${m.desc}</p>
+            <p class="text-slate-400 italic text-sm mt-2">${m.desc}</p>
 
-          <button
-            onclick="toggleVote(${currentDay}, ${idx})"
-            class="mt-4 w-full flex items-center justify-center gap-2 px-3 py-2 rounded
-              ${voted ? 'bg-green-600' : 'bg-slate-700 hover:bg-slate-600'}">
-            <i class="fas fa-thumbs-up"></i>
-            <span>${votes}</span>
-          </button>
-        </div>
-      </div>`;
-  });
+            <button
+              onclick="toggleVote(${currentDay}, ${idx})"
+              class="mt-4 w-full flex items-center justify-center gap-2 px-3 py-2 rounded
+                ${voted ? 'bg-green-600' : 'bg-slate-700 hover:bg-slate-600'}">
+              <i class="fas fa-thumbs-up"></i>
+              <span>${votes}</span>
+            </button>
+          </div>
+        </div>`;
+    });
 }
 
 window.changeDay = i => { currentDay = i; render(); };
